[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"
authors = ["Rasmus Eneman <rasmus@eneman.eu>"]

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
itertools = "0.12"
nom = "7"
rayon = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
